bundled_metadata/force-app/main/default/objects/Customer_Pricing__c/Customer_Pricing__c.object-meta.xml
<CustomObject>
    <label>Customer Pricing</label>
    <nameField>
        <displayFormat>CuPr-{00000000}</displayFormat>
        <label>Customer Pricing No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>