bundled_metadata/force-app/main/default/objects/Customer_Pricing__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Pricings</relationshipLabel>
    <relationshipName>Customer_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>