bundled_metadata/force-app/main/default/objects/Customer_Pricing__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>TODAY() &gt;= Pricing_Configuration__r.Valid_From__c &amp;&amp;  TODAY() &lt;= Pricing_Configuration__r.Valid_To__c</formula>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>