bundled_metadata/force-app/main/default/objects/Customer_Pricing__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Customer Pricings</relationshipLabel>
    <relationshipName>Customer_Pricings2</relationshipName>
    <type>Lookup</type>
</CustomField>