bundled_metadata/force-app/main/default/objects/Customer_Pricing__c/fields/Price_Group_Segment__c.field-meta.xml
<CustomField>
    <fullName>Price_Group_Segment__c</fullName>
    <formula>IF(
    NOT(ISBLANK(TEXT(Pricing_Configuration__r.Price_Group_Segment_Drinks__c))),
    TEXT(Customer__r.L3_Bevs_Pricegroup_Cluster__c),
    IF(
        NOT(ISBLANK(TEXT(Pricing_Configuration__r.Price_Group_Segment_Snacks__c))),
        TEXT(Customer__r.L3_Snacks_Pricegroup_Cluster__c),
        &apos;&apos;
    )
)</formula>
    <label>Price Group Segment</label>
    <type>Text</type>
</CustomField>