bundled_metadata/force-app/main/default/objects/Customer_Pricing__c/fields/Pricing_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Configuration</label>
    <referenceTo>Pricing_Configuration__c</referenceTo>
    <relationshipLabel>Customer Pricings</relationshipLabel>
    <relationshipName>Customer_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>