bundled_metadata/force-app/main/default/objects/Customer_Pricing__c/fields/Product_Brand__c.field-meta.xml
<CustomField>
    <fullName>Product_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Brand</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Customer Pricings</relationshipLabel>
    <relationshipName>Customer_Pricings3</relationshipName>
    <type>Lookup</type>
</CustomField>