bundled_metadata/force-app/main/default/objects/Customer_Pricing__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Category</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Customer Pricings</relationshipLabel>
    <relationshipName>Customer_Pricings4</relationshipName>
    <type>Lookup</type>
</CustomField>