bundled_metadata/force-app/main/default/objects/Customer_Pricing__c/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Customer Pricings (Product SKU)</relationshipLabel>
    <relationshipName>Customer_Pricings9</relationshipName>
    <type>Lookup</type>
</CustomField>