bundled_metadata/force-app/main/default/objects/Customer_Pricing__c/fields/Product_Subbrand__c.field-meta.xml
<CustomField>
    <fullName>Product_Subbrand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Subbrand</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Customer Pricings</relationshipLabel>
    <relationshipName>Customer_Pricings7</relationshipName>
    <type>Lookup</type>
</CustomField>