bundled_metadata/force-app/main/default/objects/Customer_Pricing__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <formula>Pricing_Configuration__r.Valid_From__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>