bundled_metadata/force-app/main/default/objects/Customer_Pricing__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <formula>Pricing_Configuration__r.Valid_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>